--- a/front/src/components/Pages/UProfile/Udetails/Udetails.css
+++ b/front/src/components/Pages/UProfile/Udetails/Udetails.css
@@ -185,5 +185,10 @@
 }
 .udetails__chart {
 	padding: 0 10px;
+	min-height: 200px;
 	/* background: linear-gradient(to right, #f5e1e4, #e3eeff); */
+}
+.MuiPaper-root {
+	border-radius: 20px;
+	min-height: 300px;
 }
